# cloud-cafe

./: README.md
CloudCafeServer/: CMakeLists.txt  User.cpp  User.h  UserList.cpp  UserList.h  main.cpp
CloudCafeServer/include/: ServerConfigs.h  User.h  UserList.h  Vector3.h
CloudCafeServer/src/: User.cpp  UserList.cpp  Vector3.cpp
cloud-cafe-server/: CMakeLists.txt  main.cpp  server
cloud-cafe-server/include/: ServerConfigs.h  User.h  UserList.h  Vector3.h
cloud-cafe-server/src/: User.cpp  UserList.cpp  Vector3.cpp
cloud-cafe-unity/Assets/: csc.rsp
cloud-cafe-unity/Assets/Plugins/: librdkafka.dylib
cloud-cafe-unity/Assets/Scripts/: AllClientsManager.cs  AuthManager.cs  ChatManager.cs  ClientConsumer.cs  OtherPlayer.cs  Player.cs  ServerConfigs.cs
cloud-cafe-unity/ProjectSettings/: ProjectSettings.asset
cloud-cafe-unity/Temp/: Assembly-CSharp-Editor.dll.hash  Assembly-CSharp-firstpass.dll.hash  Assembly-CSharp.dll.hash  CompilationLog.txt  UnityTempFile-034f3cbb8e81944b5851a0f94fb8a30a  UnityTempFile-15670eaf29b8a4765abcfffbb81483f3  UnityTempFile-1f8052f2b120c4625bde0e3c5079c34e  UnityTempFile-43f8f97d7d8914040a12fca270f817ca  UnityTempFile-7eb8e1ded12d34741805bb34f4259d42  UnityTempFile-7ecd0d9d5169146e9ae0da07e5705a1e  UnityTempFile-b6e4d9598f7c1467899dc722d6a675ae  UnityTempFile-ce762dc35c8984e079b58d4166426665  UnityTempFile-df0662179f7fd4e1299ddd8b23c0f8ba  UnityTempFile-f64ac7ca7087d455581524d586b75170  workerlic
server-playbooks/: create_couch_db_vm.yml  create_server_vm.yml  install_couch_db.yml  install_server_pkgs.yml  set_up_couch_db.yml
